# uba-aed3-tp2-2c-2019

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Div1.txt  Div2.txt  README.md  floyd  floyd.cpp  main.cpp
ejemplo/src/1-programacion_dinamica/: FibonnachiTopDown.cpp  FibonnachiTopDown.h
experimentacion/: entrada-10.txt  entrada-100.txt  entrada-30.txt  entrada-500.txt  entrada-5000.txt  entrada.txt  grafConTextMarkers.py  graficar_resultados(b).py  graficar_resultados.py  salida.txt  test.py
experimentacion/ejercicio-1/: Untitled.ipynb  experimentación.ipynb
experimentacion/ejercicio-1/instancias/: DIM-2.txt  a-set-1.txt  ejemplo-10.txt  instancia-1.txt  linea-2.txt
experimentacion/ejercicio-1/instancias/corridas/: ejemplo-10_kruskal-compressed_3_2_2.txt  instancia-1_kruskal-compressed_10_20_20.txt  instancia-1_kruskal-compressed_10_2_1.5.txt  instancia-1_kruskal-compressed_10_3_4.txt  instancia-1_kruskal-compressed_10_5_5.txt  instancia-1_kruskal-compressed_2_2_1.5.txt  instancia-1_kruskal-compressed_2_5_5.txt  instancia-1_kruskal-compressed_3_1.5_1.5.txt  instancia-1_kruskal-compressed_3_2_2.txt  instancia-1_kruskal-compressed_3_50_50.txt  instancia-1_kruskal-compressed_5_2_1.txt  instancia-1_kruskal_2_2_2.txt  instancia-1_kruskal_5_2_1.txt  linea-2_kruskal-compressed_3_20_20.txt
profiling/: Pipfile  README.md  arbitraje_over_n.py  arbitraje_random_cases.py
profiling/instancegenerators/: program_input.py  uniform_elements.py
profiling/jupyter/: Cache misses-Copy1.ipynb  Cache misses.ipynb  DP random cases.ipynb  Density.ipynb  K growth.ipynb  N growth.ipynb  cross_n_growth.ipynb  cross_w_growth.ipynb  ej_2_random_.ipynb
profiling/results/: arbitraje_over_n_cases.csv  arbitraje_random_cases.csv
profiling/tools/: csv_tools.py  profiler.py  record_tools.py
samples/: div_1.txt  div_2.txt  ejercicio_2_-2_int_cycle.txt  ejercicio_2_-3_int_matrix.txt
src/ejercicio-1/algoritmos/: BellmanFordAlgorithm.cpp  BellmanFordAlgorithm.h  KruskalAlgorithm.cpp  Prim.cpp  Prim.h  PrimAlgorithm.cpp  PrimAlgorithm.h  Segmentation.cpp  Segmentation.h
src/ejercicio-1/entities/: AdyacencyMatrixGraph.cpp  AdyacencyMatrixGraph.h  BellmanKindOfGraph.cpp  BellmanKindOfGraph.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  KruskalKindOfGraph.cpp  KruskalKindOfGraph.h  TreeGraph.cpp  TreeGraph.h  Utils.h
src/ejercicio-1/executables/: segmentation-main-time.cpp  segmentation-main.cpp
src/ejercicio_1/algoritmos/: Segmentation.cpp  Segmentation.h
src/ejercicio_1/entities/: KruskalKindOfGraph.cpp  Utils.h
src/ejercicio_1/executables/: segmentation_main.cpp  segmentation_main_time.cpp
src/ejercicio_2/: main.cpp
src/ejercicio_2/algorithms/: Algorithm.h  BellmanFordAlgorithm.cpp  BellmanFordAlgorithm.h  FloydAlgorithm.cpp  FloydAlgorithm.h
src/ejercicio_2/common/: graph.h  string_format.cpp  string_format.h
src/ejercicio_2/config/: constants.h
src/ejercicio_2/parsing/: arbitration_input.cpp  arbitration_input.h  line.cpp  line.h  word.cpp  word.h
test/1-programacion_dinamica/: FibonnchiTopDownTest.cpp
test/ejercicio-1/algoritmos/: KruskalAlgorithmTest.cpp  PrimAlgorithmTest.cpp  PrimTest.cpp  SegmentationTest.cpp
test/ejercicio-1/algoritmos/estructuras-auxiliares/: DisjoinSetTest.cpp
test/ejercicio-1/entities/: AdyacencyMatrixGraphTest.cpp  KruskalKindOfGraphTest.cpp
test/ejercicio_1/algoritmos/: KruskalAlgorithmTest.cpp  PrimAlgorithmTest.cpp  SegmentationTest.cpp
test/ejercicio_1/algoritmos/estructuras-auxiliares/: DisjoinSetTest.cpp
test/ejercicio_1/entities/: AdyacencyMatrixGraphTest.cpp  KruskalKindOfGraphTest.cpp
test/ejercicio_2/: BellmanFordTest.cpp  FloydTest.cpp  main.cpp
test/ejercicio_2/config/: constants.h
test/ejercicio_2/data/input/: ejercicio_2_-2_int_cycle.txt  ejercicio_2_-3_int_matrix.txt  ejercicio_2_sample_1.txt
